[package]
name = "ledgerverse"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger-transport = "0.8"
ledger-transport-hid = "0.8"
ledger-zondax-generic = "0.8"
tokio = { version = "1.12", features = ["full"] }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "ffecb05"
features = ["bevy_gltf", "jpeg", "png"]
